display Upazila according to District done by shakil

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BangladeshDivDisUpPersing</string>
+    <string name="app_name">64RoundBD</string>
 
     <string-array name="BloodGroup">
         <item>Select Group</item>
